--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,1 +1,5 @@
-<h1>Ask View</h1>
+<h1>Ask a question</h1>
+<form action="answer">
+  <input type="text" name="question" placeholder="What is your question?" value="<%= params[:question] %>">
+  <input type="submit" value="Ask!">
+</form>
